# trening

./: .gitignore  AGENTS.md  app-settings.yaml  athlete-notes.yaml  athlete-settings.yaml  plans.yaml  settings.yaml  test.json
.claude/: settings.json
analyzer/: README.md  README_STRAVA.md  pyproject.toml  setup.yaml
analyzer/scripts/: get_strava_token.py  plot_metrics.py
analyzer/src/: fit_analyzes.py  sikkerhetskopi.py  strava_analyze.py  strava_auth.py  strava_training_load.py
analyzer/src/analysis/: engine.py  formatters.py  models.py
analyzer/src/format/: garmin_fit.py  models.py
analyzer/src/strava/: client.py  training_load.py
analyzer/src/tools/: calculations.py  polyline_analyzer.py  settings.py
coaches/: README.md  athletes.yaml  coaches.yaml  knowledge.yaml  plans.yaml  pyproject.toml  tasks.yaml
coaches/scripts/: generate_daily_pdf.py
coaches/src/: main.py  tasks.py
coaches/src/crew/: __init__.py  config.py  loaders.py  memory.py  models.py
coaches/src/roles/: __init__.py  agents.py  config.py  crew.py  loader.py  models.py  tasks.py
coaches/src/tools/: athlete_reader.py  history_lister.py  long_time_analysis_loader.py  workout_reader.py
docs/architecture/: agent-instantiation-architecture.md
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: athleteSettings.ts  auth.ts  client.ts  coach.ts  dailyEntry.ts  feed.ts  memories.ts  plans.ts  promptLogs.ts  prompts.ts  tasks.ts  workouts.ts
frontend/src/components/: ActivityCard.tsx  AnalysisPanel.tsx  FeedDayCard.tsx  PlanCard.tsx  PlanForm.tsx  RestitutionForm.tsx  WeeklyIntensityBar.tsx
frontend/src/components/calendar/: CalendarDayCell.tsx  DayDetailPanel.tsx  MonthView.tsx  ReadOnlyDayPanel.tsx  WeekView.tsx  sportColors.ts
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: accordion.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx
frontend/src/lib/: risk.ts  utils.ts
frontend/src/pages/: AthleteConfig.tsx  CalendarPage.tsx  CoachAthleteDetailPage.tsx  CoachHomePage.tsx  CoachOverviewPage.tsx  InsightsPage.tsx  InspectPage.tsx  Plans.tsx  SetupPage.tsx  TodayTraining.tsx  TrainingFeed.tsx
sidekick/: README.md  docker-compose.yml  logging.yaml  pyproject.toml
sidekick/docs/: STRAVA_AUTH.md
sidekick/scripts/: deactivate_memories.py  export_crew_definitions.py  export_memories.py  migrate_datetime_to_utc.js  migrate_philosophy_keys.py  migrate_philosophy_to_crew_definitions.py  seed_coach.py  seed_crew_definitions.py
sidekick/scripts/crew_defaults/: agents.yaml  philosophies.yaml  tasks.yaml
sidekick/src/: __init__.py  config.py  database.py  main.py  scripts.py
sidekick/src/analysis/: __init__.py  calculations.py  engine.py  memory_relevance.py  models.py  weekly_intensity.py
sidekick/src/api/: athlete_routes.py  auth_routes.py  coach_routes.py  daily_analysis_routes.py  daily_entry_routes.py  feed_routes.py  plan_routes.py  prompt_log_routes.py  prompt_routes.py  routes.py  task_routes.py  workout_routes.py
sidekick/src/auth/: __init__.py  dependencies.py  oauth.py
sidekick/src/clients/strava/: __init__.py  client.py  polyline.py
sidekick/src/clients/trainingpeaks/: ical_client.py
sidekick/src/crew/: agents.yaml  daily_analysis.py  llm_pricing.py  long_term_analysis.py  prompt_logging.py  tasks.yaml  usage.py
sidekick/src/database/: athlete_repository.py  coach_repository.py  crew_definition_repository.py  daily_analysis_repository.py  daily_entry_repository.py  memory_repository.py  mongodb.py  plan_repository.py  prompt_log_repository.py  prompt_repository.py  task_repository.py  workout_repository.py
sidekick/src/models/: athlete.py  coach.py  crew_definition.py  crew_outputs.py  daily_analysis.py  daily_entry.py  memory.py  plan.py  prompt_config.py  prompt_log.py  strava_activity.py  task.py  workout.py
sidekick/src/services/: commute_detection.py  task_processor.py  weekly_intensity_service.py  workout_analysis.py
sidekick/src/services/handlers/: __init__.py  base.py  daily_analysis_handler.py  memory_consolidation_handler.py  training_analysis.py
sidekick/src/utils/: datetime_utils.py  duration.py
src/: fit_analyzes.py  inventory.py
src/format/: utils.py
