[project]
name = "analyzer"
version = "0.1.0"
description = "FIT file analysis tool for cycling and running workouts"
authors = [{name = "Helge Olav Aarstein", email = "helge@aarstein.net"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy",
    "pydantic>=2.0.0",
    "fitparse>=1.2.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fit-analyze = "fit_analyzes:main"
strava-analyze = "strava_analyze:main"
strava-training-load = "strava_training_load:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/analysis",
    "src/format",
    "src/strava",
    "src/tools"
]

[tool.hatch.build.targets.wheel.force-include]
"src/fit_analyzes.py" = "fit_analyzes.py"
"src/inventory.py" = "inventory.py"
"src/strava_analyze.py" = "strava_analyze.py"
"src/strava_auth.py" = "strava_auth.py"
"src/strava_training_load.py" = "strava_training_load.py"