[tool.poetry]
name = "agentic-coaches"
version = "0.1.0"
description = "Agentic AI component using CrewAI"
authors = ["Developer <dev@example.com>"]
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
crewai = "^1.4.1"
crewai-tools = "^1.4.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
langchain-core = "^0.3.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"