[project]
name = "agentic-coaches"
version = "0.1.0"
description = "Agentic AI component using CrewAI"
authors = [{name = "Helge Olav Aarstein", email = "helge@aarstein.net"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.4.1",
    "crewai-tools>=1.4.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "langchain-core>=0.3.0",
    "anthropic>=0.75.0",
    "markdown>=3.4.0",
    "weasyprint>=67.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]