[tool.poetry]
name = "sidekick"
version = "0.1.0"
description = "Sidekick - Joint solution integrating functionality from analyzer and coaches"
authors = ["Helge Olav Aarstein <helge@aarstein.net>"]
packages = [{include = "*", from = "src"}]

[tool.poetry.scripts]
dev = "scripts:dev_server"

[tool.setuptools]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
pymongo = "^4.6.1"
qdrant-client = "^1.7.0"
numpy = "^2.0.0"
pandas = "^3.0.0"
requests = "^2.32.5"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
