[project]
name = "sidekick"
version = "0.1.0"
description = "Sidekick - Joint solution integrating functionality from analyzer and coaches"
authors = [{name = "Helge Olav Aarstein", email = "helge@aarstein.net"}]
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pymongo>=4.6.1",
    "qdrant-client>=1.7.0",
    "numpy>=2.0.0",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dev = "scripts:dev_server"
start-task = "scripts:start_task"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/analysis",
    "src/api",
    "src/auth",
    "src/clients",
    "src/database",
    "src/models",
    "src/services"
]

[tool.hatch.build.targets.wheel.force-include]
"src/__init__.py" = "__init__.py"
"src/config.py" = "config.py"
"src/main.py" = "main.py"
"src/scripts.py" = "scripts.py"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
